--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-gift-generator",
+  "name": "codex-solar",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -11,9 +11,7 @@
   "dependencies": {
     "next": "14.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "openai": "^4.58.1",
-    "zod": "^3.23.8"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "20.11.30",
